arregle vista home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,25 +21,54 @@
     </div>
   </div>
 </div> -->
+
 <div class="home-container">
   <div
   class="home-container-card-presentacion my-8"
 >
-  <div
-    class="max-w-sm w-full lg:max-w-full lg:flex"
-  ></div>
 
   <div
     class="p-4 flex flex-col justify-between leading-normal"
   >
     <div class="flex flex-col items-center sm:justify-center lg:flex-row">
-      <div class="home-container-img-perfil rounded-full border-8 border-primary shadow-xl">
+    <!--   <div class="home-container-img-perfil rounded-full border-8 border-primary shadow-xl">
         <img
           src="../../assets/FotoPerfil.png"
           class="home-img-perfil h-48 rounded-full sm:h-56"
           alt="author"
         />
-      </div>
+      </div> -->
+          <div class="card-client">
+            <div class="user-picture">
+              <img
+              src="../../assets/FotoPerfil.png"
+              class="home-img-perfil h-48  sm:h-56"
+              alt="author"
+            />
+            </div>
+
+
+            <div class="social-media">
+                  <a href="mailto:matiassabbadini24@gmail.com" target="_blank">
+                    <i class="footer-contenedor-redes-iconos fa-solid fa-envelope hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
+                    <span class="tooltip-social">Email</span>
+                </a>
+                  <a href="https://github.com/Sabbadini10" target="_blank">
+                    <i class="footer-contenedor-redes-iconos fa-brands fa-github hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
+                    <span class="tooltip-social">Git hub</span>
+                </a>
+                <a href="https://www.linkedin.com/in/matias-sabbadini-desarrollador/" target="_blank">
+                  <i class="footer-contenedor-redes-iconos fa-brands fa-linkedin hover:bg-gray-700  hover:text-white rounded-md px-3 py-2"></i>
+                  <span class="tooltip-social">Linkedin</span>
+                </a>
+
+                <a href="https://walink.co/6dc120" target="_blank">
+                  <i class=" footer-contenedor-redes-iconos fa-brands fa-whatsapp hover:bg-gray-700  hover:text-white rounded-md px-3 py-2 "></i>
+                  <span class="tooltip-social">Whatsapp</span>
+                </a>
+
+              </div>
+              </div>
       <div class="pt-8 sm:pt-10 lg:pl-8 lg:pt-0">
         <h1
           class="home-nombre text-center px-1 sm:text-left sm:text-5xl"
@@ -59,4 +88,3 @@
   </div>
 </div>
 
-</div>
