--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -50,17 +50,130 @@ gap: 3em;
 
 .home-nombre{
   font-size: 30px;
-   color: var(--colorGris);
+  color:var(--colorBlanco);
     font-family: var(--tipografiaGeneral);
     font-weight: 700;
       }
 
       .home-descripcion{
   font-size: 30px;
-   color: var(--colorGris);
+  color:var(--colorBlanco);
     font-family: var(--tipografiaGeneral);
     font-weight: 700;
       }
+
+
+      .card-client {
+        background-color: var(--colorAzulNegro);
+        width: 16rem;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 10px;
+        text-align: center;
+        color:var(--colorBlanco);
+        font-family: "Poppins", sans-serif;
+        transition: all 0.3s ease;
+
+      }
+
+      .card-client:hover {
+        transform: translateY(-10px);
+      }
+
+      .user-picture {
+        overflow: hidden;
+        object-fit: cover;
+        width: 10rem;
+        height: 7rem;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+      }
+
+
+
+      .name-client {
+        margin: 0;
+        margin-top: 20px;
+        font-weight: 600;
+        font-size: 18px;
+      }
+
+      .name-client span {
+        display: block;
+        font-weight: 200;
+        font-size: 16px;
+      }
+
+      .social-media:before {
+        content: " ";
+        display: block;
+        width: 100%;
+        height: 2px;
+        margin: 20px 0;
+        background: var(--colorBlanco);
+      }
+
+      .social-media a {
+        position: relative;
+        margin-right: 15px;
+        text-decoration: none;
+        color: inherit;
+      }
+
+      .social-media a:last-child {
+        margin-right: 0;
+      }
+
+      .social-media a svg {
+        width: 1.1rem;
+        fill: currentColor;
+      }
+
+      /*-- Tooltip Social Media --*/
+      .tooltip-social {
+        background: #262626;
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        padding: 0.5rem 0.4rem;
+        border-radius: 5px;
+        font-size: 0.8rem;
+        font-weight: 600;
+        opacity: 0;
+        pointer-events: none;
+        transform: translate(-50%, -90%);
+        transition: all 0.2s ease;
+        z-index: 1;
+      }
+
+      .tooltip-social:after {
+        content: " ";
+        position: absolute;
+        bottom: 1px;
+        left: 50%;
+        border: solid;
+        border-width: 10px 10px 0 10px;
+        border-color: transparent;
+        transform: translate(-50%, 100%);
+      }
+
+      .social-media a .tooltip-social:after {
+        border-top-color: #262626;
+      }
+
+      .social-media a:hover .tooltip-social {
+        opacity: 1;
+        transform: translate(-50%, -130%);
+      }
+
+
+
 
 
       @media (min-width: 768px) {
@@ -71,6 +184,16 @@ gap: 3em;
               .home-descripcion{
           font-size: 30px;
               }
+
+              .user-picture {
+                width: 11rem !important;
+                height: 9rem !important;
+              }
+
+              .card-client {
+                width: 16rem;
+                height: 16rem;
+            }
 
       }
 
@@ -108,5 +231,14 @@ font-size: 30px;
     }
 
 
+    .user-picture {
+      width: 13rem !important;
+      height: 11rem !important;
+    }
+
+    .card-client {
+      width: 18rem;
+      height: 18rem;
+  }
 
 }
