--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -9,8 +9,33 @@
 .footer-contenedor--div-span{
   color: var(--colorBlanco);
   font-family: var(--tipografiaHeader);
+  font-size: 13px;
+  font-weight: 600;
 }
 
 .footer-contenedor-redes-iconos{
-  color: var(--colorBlanco);
+  color: var(--colorAzulNegro);
+}
+
+
+.footer-contenedor--div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+
+  .footer-contenedor--div-span{
+    font-size: 17px;
+  }
+
+}
+
+@media (min-width: 1024px) {
+
+  .footer-contenedor--div-span{
+    font-size: 18px;
+  }
+
 }
