--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer class="footer-contenedor rounded-sm w-full">
-  <div class="footer-contenedor--div w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-    <span class="footer-contenedor--div-span text-smsm:text-center">© 2023 <a href="https://flowbite.com/" class="hover:underline">Matias Sabbadini™</a>. All Rights Reserved.
+  <div class="footer-contenedor--div w-full mx-auto max-w-screen-xl p-4">
+    <span class="footer-contenedor--div-span">© 2023 <a href="https://flowbite.com/" class="hover:underline">Matias Sabbadini™</a>. All Rights Reserved.
   </span>
   <div class="footer-contenedor-redes">
-    <div class="flex justify-around gap-4 space-x-1">
+   <!--  <div class="flex justify-around gap-4 space-x-1">
 <div>
 <a href="https://www.linkedin.com/in/matias-sabbadini-desarrollador/" target="_blank">
 <i class="footer-contenedor-redes-iconos fa-brands fa-linkedin hover:bg-gray-700  hover:text-white rounded-md px-3 py-2"></i>
@@ -22,7 +22,7 @@
         <i class="footer-contenedor-redes-iconos fa-solid fa-envelope hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
        </a>
      </div>
-    </div>
+    </div> -->
   </div>
   </div>
 </footer>
