--- a/src/app/proyectos/datos/datos.component.html
+++ b/src/app/proyectos/datos/datos.component.html
@@ -12,7 +12,7 @@
           Tecnologias: {{datos.descripcion}}
         </p>
       </div>
-      <div class="flex justify-center gap-5 my-3">
+      <div class="proyectos-datos-card-container--container-boton flex justify-center gap-5 mt-3">
         <a class="proyectos-datos-card-container-boton font-bold py-2 px-4 rounded" [href]="datos.gitHub" target="_blank">
           Git-Hub
         </a>
