--- a/src/app/proyectos/proyectos.component.css
+++ b/src/app/proyectos/proyectos.component.css
@@ -19,6 +19,6 @@
   font-size: 50px;
   font-weight: 800;
   font-family: var(--tipografiaGeneral);
-  color: var(--colorGris);
+  color: var(--colorAzulNegro);
 }
 
