--- a/src/app/cursos/cursos.component.css
+++ b/src/app/cursos/cursos.component.css
@@ -21,5 +21,5 @@
   font-size: 50px;
   font-weight: 800;
   font-family: var(--tipografiaGeneral);
-  color: var(--colorGris);
+  color: var(--colorAzulNegro);
 }
