--- a/src/app/skilles/skills.component.css
+++ b/src/app/skilles/skills.component.css
@@ -1,6 +1,6 @@
 
 .skills-container-titulo{
-  width: 100vw;
+  width: 100%;
   height: 80px;
   padding: 1em;
   background-color: var(--colorVerdeCeleste);
@@ -17,7 +17,7 @@
   font-size: 50px;
   font-weight: 800;
   font-family: var(--tipografiaGeneral);
-color: var(--colorGris);
+  color: var(--colorAzulNegro);
 }
 
 .skill-container-informacion{
