--- a/src/app/proyectos/datos/datos.component.html
+++ b/src/app/proyectos/datos/datos.component.html
@@ -1,7 +1,9 @@
 <div class="proyectos-datos-container">
   <div class="proyectos-datos-container--subcontainer py-2 px-3" *ngFor="let datos of proyectosdata">
     <div class="proyectos-datos-card-container max-w-sm rounded overflow-hidden shadow-lg">
-      <img class="proyectos-datos-card-container--imagen w-full" [src]="datos.imagen" alt="Sunset in the mountains">
+      <img class="proyectos-datos-card-container--imagen w-full" 
+      
+      [src]="datos.imagen" alt="Sunset in the mountains">
       <div class="proyectos-datos-card-container-titulo px-6 py-4">
         <div class="font-bold text-xl mb-2">
           <h3 class="proyectos-datos-card-container-titulo--titulo">
