--- a/src/app/skilles/informacion/informacion.component.css
+++ b/src/app/skilles/informacion/informacion.component.css
@@ -46,7 +46,14 @@ hr {
   font-weight: 700;
 }
 
-
+.informacion-card-subcontainer--img-nombre:hover {
+  -webkit-transform:scale(1.1);
+  -moz-transform:scale(1.1);
+  -ms-transform:scale(1.1);
+  -o-transform:scale(1.1);
+  transform:scale(1.1);
+  transition: all .2s;
+}
 
 @media (min-width: 768px) {
 
