--- a/src/app/skilles/informacion/informacion.component.html
+++ b/src/app/skilles/informacion/informacion.component.html
@@ -26,7 +26,7 @@
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
           <div
-            class="flex flex-cols-2 flex-wrap items-center"
+            class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let html of htmldata"
           >
             <div class="flex flex-col flex-wrap">
@@ -62,7 +62,7 @@
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
           <div
-            class="flex flex-cols-2 flex-wrap items-center"
+            class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let css of cssdata"
           >
             <div class="flex flex-col flex-wrap">
@@ -99,7 +99,7 @@
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
           <div
-            class="flex flex-cols-2 flex-wrap items-center"
+            class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let javascript of javascriptdata"
           >
             <div class="flex flex-col flex-wrap">
@@ -135,7 +135,7 @@
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
           <div
-            class="flex flex-cols-2 flex-wrap items-center"
+            class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let backend of backenddata"
           >
             <div class="flex flex-col flex-wrap">
@@ -171,7 +171,7 @@
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
           <div
-            class="flex flex-cols-2 flex-wrap items-center"
+            class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let otros of otrosdata"
           >
             <div class="flex flex-col flex-wrap">
