fix(home) destroy bug home routing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,90 +1,63 @@
-
-
-<!-- <div class="home-container">
-  <div class="home-container-card-presentacion">
-    <div class="max-w-sm w-full lg:max-w-full lg:flex">
-      <div class="home-card  p-4 flex flex-col justify-between leading-normal">
-        <div class="home-card__content flex items-center ">
-          <div class="home-card-inner  mr-4"> <img class="home-card--img" src="../../assets/FotoPerfil.png"/></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="home-container-titulo-subtitulo">
-      <div class="home-container-container">
-        <p class="home-container-container--parrafo">Hola soy</p>
-      <h1 class="home-container-container--titulo">Matias Sabbadini</h1>
-      </div>
-<div class="home-container-container2">
-    <h2 class="home-container-container2--subtitulo">Front-End Developer</h2>
-</div>
-    </div>
-  </div>
-</div> -->
-
 <div class="home-container">
-  <div
-  class="home-container-card-presentacion my-8"
->
-
-  <div
-    class="p-4 flex flex-col justify-between leading-normal"
-  >
-    <div class="flex flex-col items-center sm:justify-center lg:flex-row">
-    <!--   <div class="home-container-img-perfil rounded-full border-8 border-primary shadow-xl">
-        <img
-          src="../../assets/FotoPerfil.png"
-          class="home-img-perfil h-48 rounded-full sm:h-56"
-          alt="author"
-        />
-      </div> -->
-          <div class="card-client">
-            <div class="user-picture">
-              <img
+  <div class="home-container-card-presentacion my-8">
+    <div class="p-4 flex flex-col justify-between leading-normal">
+      <div class="flex flex-col items-center sm:justify-center lg:flex-row">
+        <div class="card-client">
+          <div class="user-picture">
+            <img
               src="../../assets/FotoPerfil.png"
-              class="home-img-perfil h-48  sm:h-56"
+              class="home-img-perfil h-48 sm:h-56"
               alt="author"
             />
-            </div>
+          </div>
+          <div class="social-media">
+            <a href="mailto:matiassabbadini24@gmail.com" target="_blank">
+              <i
+                class="footer-contenedor-redes-iconos fa-solid fa-envelope hover:bg-gray-700 hover:text-white rounded-md px-3 py-2"
+              ></i>
+              <span class="tooltip-social">Email</span>
+            </a>
+            <a href="https://github.com/Sabbadini10" target="_blank">
+              <i
+                class="footer-contenedor-redes-iconos fa-brands fa-github hover:bg-gray-700 hover:text-white rounded-md px-3 py-2"
+              ></i>
+              <span class="tooltip-social">Git hub</span>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/matias-sabbadini-desarrollador/"
+              target="_blank"
+            >
+              <i
+                class="footer-contenedor-redes-iconos fa-brands fa-linkedin hover:bg-gray-700 hover:text-white rounded-md px-3 py-2"
+              ></i>
+              <span class="tooltip-social">Linkedin</span>
+            </a>
 
-
-            <div class="social-media">
-                  <a href="mailto:matiassabbadini24@gmail.com" target="_blank">
-                    <i class="footer-contenedor-redes-iconos fa-solid fa-envelope hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
-                    <span class="tooltip-social">Email</span>
-                </a>
-                  <a href="https://github.com/Sabbadini10" target="_blank">
-                    <i class="footer-contenedor-redes-iconos fa-brands fa-github hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
-                    <span class="tooltip-social">Git hub</span>
-                </a>
-                <a href="https://www.linkedin.com/in/matias-sabbadini-desarrollador/" target="_blank">
-                  <i class="footer-contenedor-redes-iconos fa-brands fa-linkedin hover:bg-gray-700  hover:text-white rounded-md px-3 py-2"></i>
-                  <span class="tooltip-social">Linkedin</span>
-                </a>
-
-                <a href="https://walink.co/6dc120" target="_blank">
-                  <i class=" footer-contenedor-redes-iconos fa-brands fa-whatsapp hover:bg-gray-700  hover:text-white rounded-md px-3 py-2 "></i>
-                  <span class="tooltip-social">Whatsapp</span>
-                </a>
-
-              </div>
-              </div>
-      <div class="pt-8 sm:pt-10 lg:pl-8 lg:pt-0">
-        <h1
-          class="home-nombre text-center px-1 sm:text-left sm:text-5xl"
-        >
-        Hola soy Matias Sabbadini
-        </h1>
-        <div
-          class="flex flex-col justify-center pt-3 sm:flex-row sm:pt-5 lg:justify-start"
-        >
+            <a href="https://walink.co/6dc120" target="_blank">
+              <i
+                class="footer-contenedor-redes-iconos fa-brands fa-whatsapp hover:bg-gray-700 hover:text-white rounded-md px-3 py-2"
+              ></i>
+              <span class="tooltip-social">Whatsapp</span>
+            </a>
+          </div>
+        </div>
+        <div class="pt-8 sm:pt-10 lg:pl-8 lg:pt-0">
+          <h1 class="home-nombre text-center px-1 sm:text-left sm:text-5xl">
+            Hola soy Matias Sabbadini
+          </h1>
           <div
-            class="flex items-center justify-center pl-0 sm:justify-start md:pl-1"
+            class="flex flex-col justify-center pt-3 sm:flex-row sm:pt-5 lg:justify-start"
           >
-            <p class="home-descripcion text-lg uppercase ">Front-End Developer</p>
+            <div
+              class="flex items-center justify-center pl-0 sm:justify-start md:pl-1"
+            >
+              <p class="home-descripcion text-lg uppercase">
+                Front-End Developer
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
