--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -1,11 +1,8 @@
-<div class='proyectos-container'>
+<div class="proyectos-container">
   <div class="proyectos-container-titulo">
-    <h1 class="proyectos-container-titulo--titulo">
-      Proyectos
-    </h1>
+    <h1 class="proyectos-container-titulo--titulo">Proyectos</h1>
   </div>
   <div class="">
     <app-datos></app-datos>
   </div>
-
 </div>
