--- a/src/app/skilles/informacion/informacion.component.html
+++ b/src/app/skilles/informacion/informacion.component.html
@@ -15,16 +15,18 @@
   </div>
 </div> -->
 <div class="informacion-container-card container">
-  <div class=" flex flex-column  lg:flex my-2">
+  <div class="flex flex-column lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class= "font-bold text-xl mb-2">
+      <div class="font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">HTML</h2>
         <hr class="h-px my-8 border-0" />
       </div>
       <div>
-        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+        <div
+          class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5"
+        >
           <div
             class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let html of htmldata"
@@ -51,7 +53,7 @@
     </div>
   </div>
 
-  <div class=" flex flex-column  lg:flex my-2">
+  <div class="flex flex-column lg:flex my-2">
     <div
       class="informacion-card flex flex-col border-gray-400 rounded p-4 mx-3 leading-normal"
     >
@@ -60,7 +62,9 @@
         <hr class="h-px my-8 border-0" />
       </div>
       <div>
-        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+        <div
+          class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5"
+        >
           <div
             class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let css of cssdata"
@@ -87,17 +91,18 @@
     </div>
   </div>
 
-
-  <div class=" flex flex-column  lg:flex my-2">
+  <div class="flex flex-column lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class= "font-bold text-xl mb-2">
+      <div class="font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">Javascript</h2>
         <hr class="h-px my-8 border-0" />
       </div>
       <div>
-        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+        <div
+          class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5"
+        >
           <div
             class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let javascript of javascriptdata"
@@ -124,16 +129,18 @@
     </div>
   </div>
 
-  <div class=" flex flex-column  lg:flex my-2">
+  <div class="flex flex-column lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class= "font-bold text-xl mb-2">
+      <div class="font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">Backend</h2>
         <hr class="h-px my-8 border-0" />
       </div>
       <div>
-        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+        <div
+          class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5"
+        >
           <div
             class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let backend of backenddata"
@@ -160,16 +167,18 @@
     </div>
   </div>
 
-  <div class=" flex flex-column  lg:flex my-2">
+  <div class="flex flex-column lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class= "font-bold text-xl mb-2">
+      <div class="font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">Otros</h2>
         <hr class="h-px my-8 border-0" />
       </div>
       <div>
-        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+        <div
+          class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5"
+        >
           <div
             class="informacion-card-subcontainer--img-nombre flex flex-cols-2 flex-wrap items-center"
             *ngFor="let otros of otrosdata"
@@ -195,4 +204,4 @@
       </div>
     </div>
   </div>
-
+</div>
