--- a/src/app/cursos/cursos.component.css
+++ b/src/app/cursos/cursos.component.css
@@ -1,9 +1,8 @@
-.cursos-container{
+.cursos-container {
   margin-bottom: 2em;
 }
 
-
-.cursos-container-titulo{
+.cursos-container-titulo {
   width: 100%;
   height: 80px;
   background-color: var(--colorVerdeCeleste);
@@ -11,13 +10,12 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2em;
-  box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(16, 154, 173, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(16, 154, 173, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(16, 154, 173, 0.75);
 }
 
-
-.cursos-titulo{
+.cursos-titulo {
   font-size: 50px;
   font-weight: 800;
   font-family: var(--tipografiaGeneral);
