--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,10 +1,6 @@
 <div class="cursos-container">
   <div class="cursos-container-titulo">
-<h1 class="cursos-titulo">
-  Cursos
-</h1>
+    <h1 class="cursos-titulo">Cursos</h1>
   </div>
-<app-datos></app-datos>
+  <app-datos></app-datos>
 </div>
-
-
