--- a/src/app/cursos/datos/datos.component.css
+++ b/src/app/cursos/datos/datos.component.css
@@ -1,5 +1,5 @@
-.cursos-datos-container{
-  display:flex;
+.cursos-datos-container {
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -10,10 +10,10 @@
 .cursos-datos-container--subcontainer {
   height: auto;
   width: 90%;
-  transition: all .3s;
+  transition: all 0.3s;
   position: relative;
-  border-radius: .5rem;
-   background-color: var(--colorGris);
+  border-radius: 0.5rem;
+  background-color: var(--colorGris);
   box-shadow: 0px 5px 2px 5px rgba(0, 0, 0, 0.5) !important;
 }
 
@@ -21,26 +21,23 @@
   transform: scale(1.03);
 }
 
-
-.cursos-datos-card-container{
+.cursos-datos-card-container {
   background-color: var(--colorAzulNegro);
-
 }
 
-.cursos-datos-card-container-titulo--titulo{
+.cursos-datos-card-container-titulo--titulo {
   color: var(--colorBlanco);
   font-family: var(--tipografiaCards);
   font-size: 35px;
   font-weight: 700;
 }
 
-.datos-card-container-titulo--descripcion{
+.datos-card-container-titulo--descripcion {
   color: var(--colorBlanco);
   font-family: var(--tipografiaCards);
   font-size: 30px;
   font-weight: 700;
 }
-
 
 @media (min-width: 450px) {
   .cursos-datos-container--subcontainer {
@@ -48,22 +45,20 @@
   }
 }
 
-
 @media (min-width: 768px) {
   .cursos-datos-container--subcontainer {
     width: 350px;
   }
 }
 
-
 @media (min-width: 1024px) {
-  .cursos-datos-container{
+  .cursos-datos-container {
     gap: 4em;
-      }
+  }
 }
 
 @media (min-width: 1300px) {
-  .cursos-datos-container{
+  .cursos-datos-container {
     gap: 6em;
   }
 }
