--- a/src/app/cursos/datos/datos.component.html
+++ b/src/app/cursos/datos/datos.component.html
@@ -1,19 +1,26 @@
-
 <div class="cursos-datos-container">
-  <div class="cursos-datos-container--subcontainer py-2 px-3" *ngFor="let datos of datosdata">
-    <div class="cursos-datos-card-container max-w-sm rounded overflow-hidden shadow-lg">
-      <img class="cursos-datos-card-container--imagen w-full" [src]="datos.imagen" alt="Sunset in the mountains">
+  <div
+    class="cursos-datos-container--subcontainer py-2 px-3"
+    *ngFor="let datos of datosdata"
+  >
+    <div
+      class="cursos-datos-card-container max-w-sm rounded overflow-hidden shadow-lg"
+    >
+      <img
+        class="cursos-datos-card-container--imagen w-full"
+        [src]="datos.imagen"
+        alt="Sunset in the mountains"
+      />
       <div class="cursos-datos-card-container-titulo px-6 py-4">
         <div class="font-bold text-xl mb-2">
           <h3 class="cursos-datos-card-container-titulo--titulo">
-            {{datos.nombre}}
+            {{ datos.nombre }}
           </h3>
         </div>
         <p class="datos-card-container-titulo--descripcion">
-        {{datos.descripcion}}
+          {{ datos.descripcion }}
         </p>
       </div>
     </div>
   </div>
 </div>
-
