--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -2,9 +2,7 @@
   <div class="mx-auto max-w-7xl px-1 sm:px-1 lg:px-1">
     <div class="relative flex h-16 items-center justify-center">
       <div class="absolute inset-y-0 left-0 flex items-center">
-
-
-         <button
+        <button
           type="button"
           [class.active]="isToggled"
           (click)="toggle()"
@@ -18,50 +16,53 @@
             *ngIf="!isToggled"
           ></i>
           <i
-            class="navbar-button-toggle--icon-x  fa-solid fa-x"
+            class="navbar-button-toggle--icon-x fa-solid fa-x"
             *ngIf="isToggled"
           ></i>
         </button>
         <div
           *ngIf="isToggled"
           id="mobile-menu"
-          class="navbar-button-toggle-content fixed inset-0 min-h-screen bg-gray-800 bg-opacity-100 transition-opacity lg:hidden">
+          class="navbar-button-toggle-content fixed inset-0 min-h-screen bg-gray-800 bg-opacity-100 transition-opacity lg:hidden"
         >
-          <div class="absolute left-0 min-h-screen w-2/3 bg-primary py-4 px-8 shadow md:w-1/3">
-<ul class="mt-8 flex flex-col">
-<li class="py-2">
-  <a
-  routerLink="skills"
-  routerLinkActive="active"
-  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-  >Skill</a
-></li>
-<li class="py-2"> <a
-  routerLink="proyecto"
-  routerLinkActive="active"
-  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-  >Proyectos</a
-></li>
-<li class="py-2">
-  <a
-    routerLink="cursos"
-    routerLinkActive="active"
-    class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-    >Cursos</a
-  ></li>
-<li class="py-2">
-  <a
-    routerLink="sobreMi"
-    routerLinkActive="active"
-    class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-    >Sobre Mi</a
-  ></li>
-</ul>
-
-
-
-
-
+          >
+          <div
+            class="absolute left-0 min-h-screen w-2/3 bg-primary py-4 px-8 shadow md:w-1/3"
+          >
+            <ul class="mt-8 flex flex-col">
+              <li class="py-2">
+                <a
+                  routerLink="skills"
+                  routerLinkActive="active"
+                  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                  >Skill</a
+                >
+              </li>
+              <li class="py-2">
+                <a
+                  routerLink="proyecto"
+                  routerLinkActive="active"
+                  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                  >Proyectos</a
+                >
+              </li>
+              <li class="py-2">
+                <a
+                  routerLink="cursos"
+                  routerLinkActive="active"
+                  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                  >Cursos</a
+                >
+              </li>
+              <li class="py-2">
+                <a
+                  routerLink="sobreMi"
+                  routerLinkActive="active"
+                  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                  >Sobre Mi</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -89,7 +90,6 @@
       >
         <div class="hidden sm:ml-6 md:block">
           <div class="navbar-content-div--list-desktop flex space-x-1">
-
             <div
               class="hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium items-center flex gap-1"
             >
@@ -144,7 +144,6 @@
       </div>
     </div>
   </div>
-
 </nav>
 
 <!--
