--- a/src/app/skilles/skills.component.css
+++ b/src/app/skilles/skills.component.css
@@ -1,5 +1,4 @@
-
-.skills-container-titulo{
+.skills-container-titulo {
   width: 100%;
   height: 80px;
   padding: 1em;
@@ -8,19 +7,19 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2em;
-  box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
--webkit-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
--moz-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(16, 154, 173, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(16, 154, 173, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(16, 154, 173, 0.75);
 }
 
-.skills-container-titulo--titulo{
+.skills-container-titulo--titulo {
   font-size: 50px;
   font-weight: 800;
   font-family: var(--tipografiaGeneral);
   color: var(--colorAzulNegro);
 }
 
-.skill-container-informacion{
+.skill-container-informacion {
   display: flex;
   justify-content: center;
 }
