--- a/src/app/skilles/skills.component.html
+++ b/src/app/skilles/skills.component.html
@@ -1,12 +1,8 @@
-
- <div class="skills-container mb-10">
+<div class="skills-container mb-10">
   <div class="skills-container-titulo">
-    <h1 class="skills-container-titulo--titulo">
-      Skills
-    </h1>
+    <h1 class="skills-container-titulo--titulo">Skills</h1>
   </div>
-<div class="skill-container-informacion">
-  <app-informacion></app-informacion>
+  <div class="skill-container-informacion">
+    <app-informacion></app-informacion>
+  </div>
 </div>
- </div>
-
