--- a/src/app/sobre-mi/sobre-mi.component.html
+++ b/src/app/sobre-mi/sobre-mi.component.html
@@ -1,17 +1,19 @@
 <div class="sobremi-container">
   <div class="sobremi-container-titulo">
-    <h1 class="sobremi-container-titulo--titulo">
-      Sobre Mi
-    </h1>
+    <h1 class="sobremi-container-titulo--titulo">Sobre Mi</h1>
   </div>
-  <div class="sobremi-container--subcontainer  px-6 pt-1 lg:px-8">
-        <p class="sobremi-container--subcontainer--parrafo mt-6 ">
-          Hola me llamo Matias Sabbadini, tengo 31 años y naci en Neuquen, Argentina.
-          Soy un estudiante de programación autodidacta con iniciativa y ganas de superarse.
-          Cuento con la capacidad de trabajar en equipo y resolución de problemas.
-          Busco mi primer trabajo IT para poder adquirir nuevas experiencias en lo profesional y en lo personal.
-          He estudiado el curso de Programación web full stack en Digital House gracias a una beca otorgada por la Fundación Formar en conjunto con Pampa Energia y Banco Santander.
-          En este curso me capacite en las siguientes tecnologías en JavaScript, HTML5, CSS3, React JS, Node JS, Express JS, Mysql, GIT, Bootstrap y actualmente me encuentro aprendiendo Angular y Typescript.</p>
-      </div>
-    </div>
-
+  <div class="sobremi-container--subcontainer px-6 pt-1 lg:px-8">
+    <p class="sobremi-container--subcontainer--parrafo mt-6">
+      Hola me llamo Matias Sabbadini, tengo 31 años y naci en Neuquen,
+      Argentina. Soy un estudiante de programación autodidacta con iniciativa y
+      ganas de superarse. Cuento con la capacidad de trabajar en equipo y
+      resolución de problemas. Busco mi primer trabajo IT para poder adquirir
+      nuevas experiencias en lo profesional y en lo personal. He estudiado el
+      curso de Programación web full stack en Digital House gracias a una beca
+      otorgada por la Fundación Formar en conjunto con Pampa Energia y Banco
+      Santander. En este curso me capacite en las siguientes tecnologías en
+      JavaScript, HTML5, CSS3, React JS, Node JS, Express JS, Mysql, GIT,
+      Bootstrap y actualmente me encuentro aprendiendo Angular y Typescript.
+    </p>
+  </div>
+</div>
