--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="nabvar-container rounded-sm py-3">
   <div class="mx-auto max-w-7xl px-1 sm:px-1 lg:px-1">
     <div class="relative flex h-16 items-center justify-center">
-      <div class="absolute inset-y-0 left-0 flex items-center">
+      <div>
+        <div class="absolute inset-y-0 left-0 flex items-center">
         <button
           type="button"
           [class.active]="isToggled"
@@ -72,12 +73,7 @@
             <a routerLink="/" routerLinkActive="active">
               <img
                 class="navbar-container-icon-list-img--mobile"
-                src="../../../../assets/Logo-icon.png"
-                alt="Logo Icono"
-              />
-              <img
-                class="navbar-container-icon-list-img--desktop"
-                src="../../../../assets/Logo-icon.png"
+                src="../../../../assets/LOGO2-ICON.png"
                 alt="Logo Icono"
               />
             </a>
@@ -85,9 +81,18 @@
         </div>
       </div>
 
+      </div>
+
       <div
-        class="navbar-content-div--container flex items-center justify-around gap-16 mr-10"
+        class="navbar-content-div--container flex items-center justify-between gap-16 mx-5"
       >
+       <a routerLink="/" routerLinkActive="active">
+              <img
+                class="navbar-container-icon-list-img--desktop"
+                src="../../../../assets/LOGO2-ICON.png"
+                alt="Logo Icono"
+              />
+            </a>
         <div class="hidden sm:ml-6 md:block">
           <div class="navbar-content-div--list-desktop flex space-x-1">
             <div
