--- a/src/app/cursos/datos/datos.component.css
+++ b/src/app/cursos/datos/datos.component.css
@@ -10,15 +10,19 @@
 .cursos-datos-container--subcontainer {
   height: auto;
   width: 90%;
-  transition: all 0.3s;
   position: relative;
-  border-radius: 0.5rem;
-  background-color: var(--colorGris);
-  box-shadow: 0px 5px 2px 5px rgba(0, 0, 0, 0.5) !important;
+ background: #171717;
+  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
-.cursos-datos-container--subcontainer:hover {
-  transform: scale(1.03);
+.cursos-datos-card-container--imagen {
+  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .cursos-datos-card-container {
