--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -58,17 +58,19 @@
 }
 
 .card-client {
-  background-color: var(--colorAzulNegro);
   width: 16rem;
   padding-top: 25px;
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
-  border-radius: 10px;
   text-align: center;
-  color: var(--colorBlanco);
   font-family: "Poppins", sans-serif;
   transition: all 0.3s ease;
+   background: #171717;
+  transition: 1s ease-in-out;
+  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .card-client:hover {
@@ -80,7 +82,6 @@
   object-fit: cover;
   width: 10rem;
   height: 7rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,14 +107,14 @@
   width: 100%;
   height: 2px;
   margin: 20px 0;
-  background: var(--colorBlanco);
+  background: #171717;
 }
 
 .social-media a {
   position: relative;
   margin-right: 15px;
   text-decoration: none;
-  color: inherit;
+  color: var(--colorBlanco);
 }
 
 .social-media a:last-child {
@@ -122,12 +123,12 @@
 
 .social-media a svg {
   width: 1.1rem;
-  fill: currentColor;
+  fill: #171717;
 }
 
 /*-- Tooltip Social Media --*/
 .tooltip-social {
-  background: #262626;
+  background: #171717;
   display: block;
   position: absolute;
   bottom: 0;
