--- a/src/app/proyectos/datos/datos.component.css
+++ b/src/app/proyectos/datos/datos.component.css
@@ -9,21 +9,26 @@
 
 .proyectos-datos-card-container--imagen {
   height: 150px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+ clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
 }
 
 .proyectos-datos-container--subcontainer {
   height: 350px;
   width: 90%;
-  transition: all 0.3s;
+  padding: 20px;
   position: relative;
-  border-radius: 0.5rem;
-  background-color: var(--colorGris);
-  box-shadow: 0px 5px 2px 5px rgba(0, 0, 0, 0.5) !important;
+  background: #171717;
+  transition: 1s ease-in-out;
+  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
-.proyectos-datos-container--subcontainer:hover {
-  transform: scale(1.03);
-}
+
 
 .proyectos-datos-card-container--container-boton {
   position: absolute;
@@ -31,8 +36,10 @@
   left: 21%;
 }
 
+
+
 .proyectos-datos-card-container {
-  background-color: var(--colorAzulNegro);
+ background-color: var(--colorAzulNegro);
   height: 330px;
 }
 
@@ -139,4 +146,6 @@
   .proyectos-datos-card-container-titulo--titulo {
     font-size: 50px;
   }
+
+
 }
