--- a/src/app/skilles/informacion/informacion.component.css
+++ b/src/app/skilles/informacion/informacion.component.css
@@ -10,48 +10,46 @@
 .informacion-card {
   width: 80vw;
   height: min-content;
-  transition: all 0.3s;
   position: relative;
-  border-radius: 0.5rem 2rem;
-  box-shadow: 0px 15px 20px -5px rgba(0, 0, 0, 0.5);
-  background-color: white;
+  background: #171717;
+  transition: 1s ease-in-out;
+  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
-.informacion-card:hover {
-  transform: scale(1.03);
+
+.informacion-container-card-imagen{
+   transition: 1s ease-in-out;
+  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
+
 
 .informacion-title {
   color: var(--colorBlanco);
 }
 
 hr {
-  background-color: var(--colorAzulNegro);
+  background-color: var(--colorBlanco);
 }
 
 .informacion-container-titulo {
   font-family: var(--tipografiaCards);
   font-weight: 800;
   font-size: 50px;
-  color: var(--colorAzulNegro);
+  color: var(--colorBlanco);
 }
 
 .informacion-container-card-nombre {
-  color: var(--colorAzulNegro);
+  color: var(--colorBlanco);
   font-family: var(--tipografiaCards);
   margin-top: 0.5em;
   font-size: 30px;
   font-weight: 700;
 }
 
-.informacion-card-subcontainer--img-nombre:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1);
-  transition: all 0.2s;
-}
 
 @media (min-width: 768px) {
   .informacion-container-card-nombre {
