--- a/src/app/sobre-mi/sobre-mi.component.css
+++ b/src/app/sobre-mi/sobre-mi.component.css
@@ -30,9 +30,9 @@
 }
 
 .sobremi-container--subcontainer--parrafo {
-  color: var(--colorAzulNegro);
+  color:  #171717;
   font-weight: 700;
-  font-family: var(--tipografiaGeneral);
+  font-family: var(--tipografiaHeader);
   line-height: 2rem;
   font-size: 20px;
 }
