--- a/src/app/cursos/datos/datos.component.css
+++ b/src/app/cursos/datos/datos.component.css
@@ -11,7 +11,7 @@
   height: auto;
   width: 90%;
   position: relative;
- background: #171717;
+ background: var(--colorAzulNegro);
   clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -25,9 +25,6 @@
   border-bottom-left-radius: 20px;
 }
 
-.cursos-datos-card-container {
-  background-color: var(--colorAzulNegro);
-}
 
 .cursos-datos-card-container-titulo--titulo {
   color: var(--colorBlanco);
