--- a/src/app/proyectos/datos/datos.component.css
+++ b/src/app/proyectos/datos/datos.component.css
@@ -8,7 +8,7 @@
 }
 
 .proyectos-datos-card-container--imagen {
-  height: 150px;
+  height: 170px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
  clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
@@ -19,7 +19,7 @@
   width: 90%;
   padding: 20px;
   position: relative;
-  background: #171717;
+ background: var(--colorAzulNegro);
   transition: 1s ease-in-out;
   clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
   border-top-right-radius: 20px;
@@ -62,6 +62,8 @@
   font-size: 20px;
 }
 
+
+
 @media (min-width: 375px) {
   .proyectos-datos-card-container--container-boton {
     bottom: 8%;
@@ -69,7 +71,7 @@
   }
 
   .proyectos-datos-card-container--imagen {
-    height: 160px;
+    height: 180px;
   }
 
   .proyectos-datos-container--subcontainer {
@@ -93,7 +95,7 @@
   }
 
   .proyectos-datos-card-container--imagen {
-    height: 170px;
+    height: 190px;
   }
 
   .proyectos-datos-container--subcontainer {
@@ -113,7 +115,7 @@
   }
 
   .proyectos-datos-card-container--imagen {
-    height: 150px !important;
+    height: 200px;
   }
 
   .proyectos-datos-card-container-titulo--titulo {
@@ -147,5 +149,8 @@
     font-size: 50px;
   }
 
+    .proyectos-datos-card-container--imagen {
+    height: 220px;
+  }
 
 }
