--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,10 @@
 html,body {
   width: 100%;
  height: 100%;
- background: var(--colorCelesteClaro);
+  background-image: url('./assets/stacked-waves-haikei.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
  scroll-behavior: smooth;
 }
 
